fixed mobile overflow

--- a/porfolio-app/src/styles/global.css
+++ b/porfolio-app/src/styles/global.css
@@ -201,10 +201,17 @@ img {
 
 /*#region contact-css*/
 
-.contact-responsive {
+.contact-responsive  {
 
 
   min-width: 100vw;
+  max-width: 100vw;
+  
+}
+body > *{
+  overflow-x: hidden;
+   position:absolute;
+   left:0;
 }
 
 @media only screen and (min-height: 990px) {
@@ -220,8 +227,8 @@ img {
 /*#region about-css*/
 .about-responsive {
 
-
   min-width: 100vw;
+  max-width: 100vw;
 }
 
 @media only screen and (min-width: 750px) {
@@ -245,14 +252,12 @@ img {
 
 /*#region landing-css*/
 
-.css-wfe5u0-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper{
 
-
-}
 .landing-responsive {
 
   height: 85vh;
   min-width: 100vw;
+  max-width: 100vw;
 
 
 }
